<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Activities.RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:layout_marginTop="50dp"
        android:textSize="42sp"
        android:textStyle="bold"
        android:id="@+id/app_name"
        />

    <TextView
        android:id="@+id/signup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_signup"
        android:textColor="@color/white"
        android:textSize="42sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="90dp">

        <EditText
            android:id="@+id/usernameRegistrationID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:hint="@string/hint_username"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/emailRegistrationID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameRegistrationID"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:hint="@string/hint_email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/passwordRegistrationID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailRegistrationID"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signupButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordRegistrationID"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:text="@string/btn_signup" />

    </RelativeLayout>
</RelativeLayout>