<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo_colored"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/gsans_bold"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:id="@+id/app_name"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/uploadButtonID"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/text_upload"
                android:background="@drawable/main_button"
                tools:ignore="HardcodedText" />

            <Button
                android:background="@drawable/main_button"
                android:id="@+id/videosButtonID"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:text="@string/text_videos"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:background="@drawable/main_button"
                android:id="@+id/sharedVideosButtonID"
                android:text="@string/text_sharedVideos"
                android:layout_width="150dp"
                android:layout_height="150dp"
                />

            <Button
                android:background="@drawable/main_button"
                android:id="@+id/profileButtonID"
                android:text="@string/text_profile"
                android:layout_width="150dp"
                android:layout_marginLeft="10dp"
                android:layout_height="150dp"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>