<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/login_bg">

  <android.support.design.widget.TextInputLayout
      android:id="@+id/videoTitleEdtTxtID"
      android:layout_centerHorizontal="true"
      android:layout_width="match_parent"
      android:layout_marginLeft="50dp"
      android:layout_marginTop="45dp"
      android:layout_marginRight="50dp"
      android:layout_height="wrap_content">

      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:hint="@string/video_title"
          android:textColor="@color/white"
          android:layout_height="wrap_content" />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/videoDescpEdtTxtID"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="35dp"
      android:layout_marginRight="50dp"
      android:layout_marginLeft="50dp"
      android:layout_below="@+id/videoTitleEdtTxtID"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/video_description"
          android:textColor="@color/white"/>

  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/chooseVideoButtonID"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/choose_video"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="30dp"
      android:background="@drawable/button_bg"
      android:layout_below="@id/videoDescpEdtTxtID"/>

    <Button
        android:id="@+id/uploadVideoButtonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_video"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_bg"
        android:layout_below="@id/chooseVideoButtonID"/>

</RelativeLayout>